--- a/Plasmid_data_version_2.ipynb
+++ b/Plasmid_data_version_2.ipynb
@@ -229,7 +229,7 @@
       "source": [
         "# # Downloading the list of plasmids in PLSDB Database\n",
         "\n",
-        "# url = 'https://github.com/sabhi-29/Plasmid_dataset/blob/4fd1d870cffd9c364a183e7dacf7508b9f962e8c/plsdb.xlsx'\n",
+        "# url = 'https://docs.google.com/spreadsheets/d/1ZElCKJX5yKHbYmTDfqccn0uN0zS1zIOp/edit?usp=sharing&ouid=105822578795074978309&rtpof=true&sd=true'\n",
         "# r = requests.get(url, allow_redirects=True)\n",
         "# open(f'plsdb.xlsx', 'wb').write(r.content)\n",
         "\n",
