--- a/Plasmid_data_version_2.ipynb
+++ b/Plasmid_data_version_2.ipynb
@@ -229,7 +229,7 @@
       "source": [
         "# # Downloading the list of plasmids in PLSDB Database\n",
         "\n",
-        "# url = 'https://docs.google.com/spreadsheets/d/1ZElCKJX5yKHbYmTDfqccn0uN0zS1zIOp/edit?usp=sharing&ouid=105822578795074978309&rtpof=true&sd=true'\n",
+        "# url = 'https://docs.google.com/spreadsheets/d/e/2PACX-1vQl2cdQK5RSpUZb1n7PxAXl8a0SNw0THRBC7dJBoU0LhehmPF2Q72QnM5TNjlLlQQ/pub?output=xlsx'\n",
         "# r = requests.get(url, allow_redirects=True)\n",
         "# open(f'plsdb.xlsx', 'wb').write(r.content)\n",
         "\n",
